# invest-ml

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
.dagster/: dagster.yaml
.dagster/.telemetry/: id.yaml
.dagster/history/: runs.db
.dagster/schedules/: schedules.db
.dg/: telemetry.yaml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_company_security_schema.py  0003_raw_version_derivations.py  0004_canonical_metrics_indexes.py  0005_price_bars_sync_state.py  0006_drop_price_bars_market_cap.py  0007_feature_registry_schema.py  0008_universe_as_of_date.py
configs/: canonical_metrics_v1.yaml  features_v1.yaml  market_data_v1.yaml  sic_buckets_v1.yaml  target_v1.yaml  universe_v1.yaml
configs/features/: compounder_v1.yaml
configs/universes/: training_universe_v1.yaml
src/invest_ml/: definitions.py  utils.py
tests/: test_configs.py  test_definitions.py  test_models.py  test_utils.py
tests/canonical/: test_classifier.py  test_registry.py  test_resolver.py  test_service.py
tests/company_catalog/: test_asset.py  test_service.py
tests/db/: test_company_data_profiles.py
tests/defs/: test_canonical_metrics_asset.py  test_company_market_profiles_asset.py  test_companyfacts_data_profiles_asset.py  test_feature_registry_asset.py  test_scoring_universe_asset.py  test_selected_price_bars_asset.py  test_training_universe_asset.py  test_xbrl_facts_asset.py
tests/features/: test_feature_registry_config.py  test_feature_registry_service.py  test_feature_source_references.py
tests/market/: test_market_profile_service.py  (+2 more)
(+117 files in other folders)
