[project]
name = "invest_ml"
requires-python = ">=3.12,<3.15"
version = "0.1.0"
dependencies = [
    "alembic>=1.18.5",
    "dagster==1.13.13",
    "httpx>=0.28.1",
    "orjson>=3.11.9",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0",
]

[dependency-groups]
dev = [
    "dagster-dg-cli",
    "dagster-webserver",
    "mypy>=2.2.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.21",
    "types-pyyaml>=6.0.12.20260518",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "invest_ml"
registry_modules = [
    "invest_ml.components.*",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
